# CopyPasteRemote

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-client.txt
.github/workflows/: semgrep.yml
copypasteremote/: .gitignore  README.md  pyproject.toml  requirements-client-modern.txt  requirements-server.txt  run_client.py  run_server.py
copypasteremote/cpr_client/: __init__.py  agent.py  clipboard_posix.py  clipboard_win.py  config.py  main.py  packaging.py  serializer.py  sync.py  transport.py  tray.py  winservice.py  wizard.py
copypasteremote/cpr_server/: __init__.py  activity.py  admin_cli.py  auth.py  config.py  dashboard.py  main.py  presence.py  security.py  storage.py  winservice.py
copypasteremote/cpr_shared/: __init__.py  crypto.py
copypasteremote/docs/: ARCHITECTURE.md  HOTKEYS.md  IMPLEMENTATION_PLAN.md  INSTALL.md  SECURITY.md  SPECIFICATION.md  USER_GUIDE.md
copypasteremote/docs/deployment/: DEPLOYMENT.md
copypasteremote/scripts/: dev_smoke.py  render_dashboard_preview.py
copypasteremote/scripts/client/: build_exe.bat  cpr_client.spec  (+3 more)
copypasteremote/tests/: conftest.py  test_clipboard_posix.py  test_crypto.py  test_dashboard.py  test_protocol.py  test_roadmap.py  test_security.py  test_server.py  test_sync.py  test_ws.py
cpr/: __init__.py  client.py  protocol.py  server.py  winclip.py
cpr_client/: clipdata.py  config.py  hotkeys.py
cpr_server/: presence.py
cpr_shared/: protocol.py  version.py
docs/: SPECIFICATION.md
docs/deployment/: DEPLOYMENT.md
tests/: test_integration.py  test_packaging.py
(+23 files in other folders)
